...
        
        view.addSubview(logoImageView)
        logoImageView.translatesAutoresizingMaskIntoConstraints = false
        
        // Button
        
        self.enterButton.setTitle("Войти", for: .normal)
        self.enterButton.setTitleColor(.ypBlackIOS, for: .normal)
        self.enterButton.layer.masksToBounds = true
        self.enterButton.layer.cornerRadius = 16
        
        enterButton.translatesAutoresizingMaskIntoConstraints = false
        
        // NavigationController
         navigationController?.navigationBar.backIndicatorImage = UIImage(named: "Backward")
    
        navigationController?.navigationBar.backIndicatorTransitionMaskImage = UIImage(named: "Backward")
        navigationItem.backBarButtonItem = UIBarButtonItem(title: "", style: .plain, target: nil, action: nil)
        navigationItem.backBarButtonItem?.tintColor = UIColor(named: "YP Black (iOS)")
        
        // Constraint
...
