...
    }
    
    func setIsLiked(for cell: ImagesListCell, with buttonStatus: Bool){
        cell.likeButton.setTitle("", for: .normal)
        if buttonStatus {
            cell.likeButton.setImage(.activeLike, for: .normal)
            cell.likeButton.accessibilityIdentifier = "activeLike"
        } else {
            cell.likeButton.setImage(.unactiveLike, for: .normal)
            cell.likeButton.accessibilityIdentifier = "unactiveLike"
        }
    }
    
    private func showShimmer(over view: UIView) {
        let gradient = CAGradientLayer()
        gradient.frame = view.bounds
...
